js/js.translator/testData/incremental/invalidation/addMethodToInterfaceWithConsumer/lib2/l2.0.kt
package sample

fun use(x: I): Int = x.foo()
